--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,76 @@
-.App {
-  text-align: center;
+/* General Styles */
+body {
+  font-family: Arial, sans-serif;
+  /* background: url('your-background-image-url.jpg') no-repeat center center fixed; */
+  background-size: cover;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.weather-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   padding: 20px;
+  color: black;
 }
 
-.current-temperature {
-  flex: 1;
-  margin-right: 20px; /* Add some space between the two sections */
+.search-bar {
+  margin-bottom: 20px;
 }
 
-.hourly-temperature {
-  flex: 1;
+.error {
+  color: red;
 }
 
+.current-weather {
+  text-align: center;
+}
+
+.current-weather h1 {
+  font-size: 4em;
+  margin: 0;
+}
+
+.current-weather .city {
+  font-size: 1.5em;
+  margin: 10px 0;
+}
+
+.forecast-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.forecast-card {
+  background: white(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 15px;
+  margin: 5px;
+  text-align: center;
+  width: 150px;
+}
+
+.forecast-card .day {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.forecast-card .date {
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
+.forecast-card .temperature {
+  font-size: 1.5em;
+}
+
+.forecast-card .high-low {
+  font-size: 0.9em;
+}
+
+.temperature-toggle {
+  margin: 20px;
+}
